--- a/index.html
+++ b/index.html
@@ -104,34 +104,52 @@
     <script type="text/javascript">
         // 创建假数据
         var points = [{
-            "lng": 122.037459,
-            "lat": 37.53202,
-            "type": "已打卡",
-            "place": "威海火炬八街/环海路(路口)",
-            "name": "23年4月，去早了天有点冷，没怎么下水，海边真舒服。<a href=/ target=_blank>更多内容</a>",
-            "img": "<a href=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/about/202305231911424.jpg target=_blank> <img src=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/about/202305231911424.jpg  height=250px></a>"
-        }, {
-            "lng": 120.12792,
-            "lat": 30.228932,
-            "type": "在路上",
-            "place": "杭州西湖",
-            "name": "",
-            "img": "<a href=https://answer.baidu.com/answer/land?params=UC24Ls9OSuJNJlePeVuh9f%2BEGe3qv9lpGAGoe5mgCt5fpsqsgK0zhmaSH0plFhsFyN4bkMPDEXQ%2Bhys%2FM9aRi3WoXFViynLPO%2BG1f9o727b4h5AcnoWuVSauWEcjVrV1IXJtCBUa0XYEHBMUqUACcJFbvkTMpXMRGaep2DnRHDLlyf87xWzG%2FJELA20t%2BRRiP0twzs7yvqm5z2a3TqHxfg%3D%3D&from=dqa&lid=d546ec0800053256&word=%E8%A5%BF%E6%B9%96%E6%94%BB%E7%95%A5  target=_blank>提前查看攻略</a>"
-        }, {
-            "lng": 118.779108,
-            "lat": 32.036275,
-            "type": "猫咪",
-            "place": "木屐巷",
-            "name": "一家好几口，具体不清楚，大概有八九只",
-            "img": "<a href=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/img/202403091614998.jpg target=_blank> <img src=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/img/202403091614998.jpg  height=250px></a>"
-        }, {
-            "lng": 118.792888,
-            "lat": 32.056102,
-            "type": "猫咪",
-            "place": "南京市玄武区珠江路30号",
-            "name": "兰州拉面，一只可爱的小橘猫，不怕人！！！",
-            "img": "<a href=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/img/202403091619986.jpg target=_blank> <img src=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/img/202403091619986.jpg  height=250px></a>"
-        }, ];
+                "lng": 122.037459,
+                "lat": 37.53202,
+                "type": "已打卡",
+                "place": "威海火炬八街/环海路(路口)",
+                "name": "23年4月，去早了天有点冷，没怎么下水，海边真舒服。<a href=/ target=_blank>更多内容</a>",
+                "img": "<a href=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/about/202305231911424.jpg target=_blank> <img src=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/about/202305231911424.jpg  height=250px></a>"
+            }, {
+                "lng": 120.12792,
+                "lat": 30.228932,
+                "type": "在路上",
+                "place": "杭州西湖",
+                "name": "",
+                "img": "<a href=https://answer.baidu.com/answer/land?params=UC24Ls9OSuJNJlePeVuh9f%2BEGe3qv9lpGAGoe5mgCt5fpsqsgK0zhmaSH0plFhsFyN4bkMPDEXQ%2Bhys%2FM9aRi3WoXFViynLPO%2BG1f9o727b4h5AcnoWuVSauWEcjVrV1IXJtCBUa0XYEHBMUqUACcJFbvkTMpXMRGaep2DnRHDLlyf87xWzG%2FJELA20t%2BRRiP0twzs7yvqm5z2a3TqHxfg%3D%3D&from=dqa&lid=d546ec0800053256&word=%E8%A5%BF%E6%B9%96%E6%94%BB%E7%95%A5  target=_blank>提前查看攻略</a>"
+            }, {
+                "lng": 118.779108,
+                "lat": 32.036275,
+                "type": "猫咪",
+                "place": "木屐巷",
+                "name": "一家好几口，具体不清楚，大概有八九只",
+                "img": "<a href=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/img/202403091614998.jpg target=_blank> <img src=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/img/202403091614998.jpg  height=250px></a>"
+            }, {
+                "lng": 118.792888,
+                "lat": 32.056102,
+                "type": "猫咪",
+                "place": "南京市玄武区珠江路30号",
+                "name": "兰州拉面，一只可爱的小橘猫，不怕人！！！",
+                "img": "<a href=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/img/202403091619986.jpg target=_blank> <img src=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/img/202403091619986.jpg  height=250px></a>"
+            }, {
+                "lng": 118.809396,
+                "lat": 32.098252,
+                "type": "已打卡",
+                "place": "南京红山森林动物园",
+                "name": "",
+                "img": "<a href=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/img/202403091711174.jpg target=_blank><img src=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/img/202403091711174.jpg height=250px></a><a href=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/img/202403091711173.jpg target=_blank><img src=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/img/202403091711173.jpg height=250px></a><a href=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/img/202403091711175.jpg target=_blank><img src=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/img/202403091711175.jpg height=250px></a>"
+            },
+
+
+            // {
+            // "lng": 122.037459,
+            // "lat": 37.53202,
+            // "type": "已打卡",
+            // "place": "",
+            // "name": "",
+            // "img": "<a href= target=_blank> <img src= height=250px></a>"
+            // },
+        ];
 
         // 在指定容器创建地图实例并设置最大最小缩放级别
         var map = new BMap.Map("container", {
