--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@
             margin-top: 10px;
         }
     </style>
+    <script>
+        (function() {
+            let meta = document.createElement('meta');
+            meta.content = 'no-referrer';
+            meta.name = 'referrer';
+            document.getElementsByTagName('head')[0].appendChild(meta);
+            console.log(document.getElementsByTagName('head'))
+        })()
+    </script>
 </head>
 
 <body>
