--- a/index.html
+++ b/index.html
@@ -104,13 +104,6 @@
     <script type="text/javascript">
         // 创建假数据
         var points = [{
-                "lng": 122.037459,
-                "lat": 37.53202,
-                "type": "已打卡",
-                "place": "威海火炬八街/环海路(路口)",
-                "name": "23年4月，去早了天有点冷，没怎么下水，海边真舒服。<a href=/ target=_blank>更多内容</a>",
-                "img": "<a href=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/about/202305231911424.jpg target=_blank> <img src=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/about/202305231911424.jpg  height=250px></a>"
-            }, {
                 "lng": 120.12792,
                 "lat": 30.228932,
                 "type": "在路上",
@@ -123,21 +116,42 @@
                 "type": "猫咪",
                 "place": "木屐巷",
                 "name": "一家好几口，具体不清楚，大概有八九只",
-                "img": "<a href=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK24ZQOeYxZhiaozMiaXZNwlfLl4SullhO5wojAw8WxiaQ93RP24SooDJl4g/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg target=_blank> <img src=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK24ZQOeYxZhiaozMiaXZNwlfLl4SullhO5wojAw8WxiaQ93RP24SooDJl4g/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg height=300px></a>"
+                "img": "<a href=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/img/202403091614998.jpg target=_blank> <img src=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/img/202403091614998.jpg width=300px height=300px></a>"
             }, {
                 "lng": 118.792888,
                 "lat": 32.056102,
                 "type": "猫咪",
                 "place": "南京市玄武区珠江路30号",
                 "name": "兰州拉面，一只可爱的小橘猫，不怕人！！！",
-                "img": "<a href=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK24ZQOeYxZhiaozMiaXZNwlfLl4SullhO5wojAw8WxiaQ93RP24SooDJl4g/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg target=_blank> <img src=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK24ZQOeYxZhiaozMiaXZNwlfLl4SullhO5wojAw8WxiaQ93RP24SooDJl4g/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg height=300px></a>"
+                "img": "<a href=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK24ZQOeYxZhiaozMiaXZNwlfLl4SullhO5wojAw8WxiaQ93RP24SooDJl4g/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg target=_blank> <img src=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK24ZQOeYxZhiaozMiaXZNwlfLl4SullhO5wojAw8WxiaQ93RP24SooDJl4g/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg width=300px height=300px></a>"
+            }, {
+                "lng": 118.784736,
+                "lat": 32.037914,
+                "type": "猫咪",
+                "place": "建邺路152号",
+                "name": "台铃电动车家的，一只小橘猫，一只三花。",
+                "img": "<a href=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2R5BTmriaicMJVMIich0Soqic4hH9wu5FdRyia1bY7ib3tzlrjKvp6D55ksZQ/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg target=_blank> <img src=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2R5BTmriaicMJVMIich0Soqic4hH9wu5FdRyia1bY7ib3tzlrjKvp6D55ksZQ/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg width=300px height=300px></a><a href=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2AY0B7HVQFwLvVHjR5zW3z94m5WtWvHcpWNeONqQkdpKfAGoBSqK7qQ/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg target=_blank> <img src=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2AY0B7HVQFwLvVHjR5zW3z94m5WtWvHcpWNeONqQkdpKfAGoBSqK7qQ/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg width=300px height=300px></a>"
+            }, {
+                "lng": 118.745355,
+                "lat": 32.032772,
+                "type": "猫咪",
+                "place": "建邺区江东南路18号",
+                "name": "万和源居东门，一只大公猫。",
+                "img": "<a href=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2Upic16biamicEKibBTjnoQiboYdAD8Oof2S6VZJnGicvgDAcqJjnHJZl2klQ/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg target=_blank> <img src=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2Upic16biamicEKibBTjnoQiboYdAD8Oof2S6VZJnGicvgDAcqJjnHJZl2klQ/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg width=300px height=300px></a>"
             }, {
                 "lng": 118.809396,
                 "lat": 32.098252,
                 "type": "已打卡",
                 "place": "南京红山森林动物园",
                 "name": "",
-                "img": "<a href=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2B2p3ibExA69sChqNic8lt8x8JticsYlCjdVjCbSrxktyEFqgVKmDymnGg/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg target=_blank><img src=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2B2p3ibExA69sChqNic8lt8x8JticsYlCjdVjCbSrxktyEFqgVKmDymnGg/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg height=300px></a>"
+                "img": "<a href=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2B2p3ibExA69sChqNic8lt8x8JticsYlCjdVjCbSrxktyEFqgVKmDymnGg/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg target=_blank><img src=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2B2p3ibExA69sChqNic8lt8x8JticsYlCjdVjCbSrxktyEFqgVKmDymnGg/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg width=300px height=300px></a>"
+            }, {
+                "lng": 122.037459,
+                "lat": 37.53202,
+                "type": "已打卡",
+                "place": "威海火炬八街/环海路(路口)",
+                "name": "23年4月，去早了天有点冷，没怎么下水，海边真舒服。<a href=/ target=_blank>更多内容</a>",
+                "img": "<a href=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/about/202305231911424.jpg target=_blank> <img src=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/about/202305231911424.jpg  height=250px></a>"
             },
 
 
@@ -158,7 +172,7 @@
         });
 
         //初始化地图，设置中心点和显示级别
-        map.centerAndZoom(new BMap.Point(118.790554, 32.048009), 12);
+        map.centerAndZoom(new BMap.Point(118.790554, 32.048009), 14);
 
         //开启鼠标滚轮缩放功能，仅对PC上有效
         map.enableScrollWheelZoom(true);
