--- a/index.html
+++ b/index.html
@@ -132,8 +132,9 @@
 
 <body>
     <div>
-        <b><a>足迹地图</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b>
-        <a>©</a> <a href="https://www.lixiaomu.fun/">李小沐</a>
+        <b><a>足迹地图</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b>
+        <a>©</a> <a href="https://www.lixiaomu.fun/">李小沐</a>&nbsp;&nbsp;&nbsp;
+        <a>💌</a> <a href="https://blog.lixiaomu.fun/comments/">留言</a>
     </div>
 
     <view class="weather_info_wrap">
@@ -182,39 +183,88 @@
                 "type": "猫咪",
                 "place": "建邺路152号",
                 "name": "台铃电动车家的，一只小橘猫，一只三花。",
-                "img": "<a href=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2R5BTmriaicMJVMIich0Soqic4hH9wu5FdRyia1bY7ib3tzlrjKvp6D55ksZQ/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg target=_blank> <img src=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2R5BTmriaicMJVMIich0Soqic4hH9wu5FdRyia1bY7ib3tzlrjKvp6D55ksZQ/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg width=300px height=300px></a><a href=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2AY0B7HVQFwLvVHjR5zW3z94m5WtWvHcpWNeONqQkdpKfAGoBSqK7qQ/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg target=_blank> <img src=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2AY0B7HVQFwLvVHjR5zW3z94m5WtWvHcpWNeONqQkdpKfAGoBSqK7qQ/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg width=300px height=300px></a>"
+                "img": "<a href=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2R5BTmriaicMJVMIich0Soqic4hH9wu5FdRyia1bY7ib3tzlrjKvp6D55ksZQ/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg target=_blank> <img src=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2R5BTmriaicMJVMIich0Soqic4hH9wu5FdRyia1bY7ib3tzlrjKvp6D55ksZQ/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg width=250px height=250px></a><a href=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2AY0B7HVQFwLvVHjR5zW3z94m5WtWvHcpWNeONqQkdpKfAGoBSqK7qQ/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg target=_blank> <img src=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2AY0B7HVQFwLvVHjR5zW3z94m5WtWvHcpWNeONqQkdpKfAGoBSqK7qQ/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg width=250px height=250px></a>"
             }, {
                 "lng": 118.745355,
                 "lat": 32.032772,
                 "type": "猫咪",
                 "place": "建邺区江东南路18号",
                 "name": "万和源居东门，一只大公猫。",
-                "img": "<a href=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2Upic16biamicEKibBTjnoQiboYdAD8Oof2S6VZJnGicvgDAcqJjnHJZl2klQ/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg target=_blank> <img src=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2Upic16biamicEKibBTjnoQiboYdAD8Oof2S6VZJnGicvgDAcqJjnHJZl2klQ/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg width=300px height=300px></a>"
+                "img": "<a href=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2Upic16biamicEKibBTjnoQiboYdAD8Oof2S6VZJnGicvgDAcqJjnHJZl2klQ/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg target=_blank> <img src=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2Upic16biamicEKibBTjnoQiboYdAD8Oof2S6VZJnGicvgDAcqJjnHJZl2klQ/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg width=250px height=250px></a>"
             }, {
                 "lng": 118.809396,
                 "lat": 32.098252,
-                "type": "已打卡",
+                "type": "记录",
                 "place": "南京红山森林动物园",
                 "name": "",
-                "img": "<a href=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2B2p3ibExA69sChqNic8lt8x8JticsYlCjdVjCbSrxktyEFqgVKmDymnGg/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg target=_blank><img src=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2B2p3ibExA69sChqNic8lt8x8JticsYlCjdVjCbSrxktyEFqgVKmDymnGg/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg width=300px height=300px></a>"
+                "img": "<a href=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2B2p3ibExA69sChqNic8lt8x8JticsYlCjdVjCbSrxktyEFqgVKmDymnGg/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg target=_blank><img src=https://mmbiz.qpic.cn/mmbiz_jpg/AUkUfiaBPUBW6VZ82aYrerLk0dpwGFUK2B2p3ibExA69sChqNic8lt8x8JticsYlCjdVjCbSrxktyEFqgVKmDymnGg/640?wxfrom=12&tp=wxpic&wx_fmt=jpeg width=250px height=250px></a>"
             }, {
                 "lng": 122.037459,
                 "lat": 37.53202,
-                "type": "已打卡",
+                "type": "记录",
+                "time": "2023.4.20",
                 "place": "威海火炬八街/环海路(路口)",
                 "name": "23年4月，去早了天有点冷，没怎么下水，海边真舒服。<a href=/ target=_blank>更多内容</a>",
                 "img": "<a href=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/about/202305231911424.jpg target=_blank> <img src=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/about/202305231911424.jpg  height=250px></a>"
+            }, {
+                "lng": 118.85696,
+                "lat": 32.025737,
+                "type": "旧居",
+                "time": "2018.09---2019.09",
+                "place": "江苏省南京市玄武区康定里9幢",
+                "name": "大二时期跟同学一起在校外合租的房子",
+                "img": "<a href=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/img/202405051514770.png target=_blank> <img src=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/img/202405051514770.png  height=250px></a>"
+            }, {
+                "lng": 118.850188,
+                "lat": 32.047759,
+                "type": "记录",
+                "time": "XX",
+                "place": "下马坊遗址公园",
+                "name": "这四个人半夜想骑车上紫金山的，绕迷路绕到了中山陵，被门卫追着跑，跑到了下马坊公园扎帐篷，开电动车灯打牌😂",
+                "img": "<a href=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/img/202405051514772.png target=_blank> <img src=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/img/202405051514772.png  height=250px></a>"
+            }, {
+                "lng": 118.720838,
+                "lat": 31.813994,
+                "type": "记录",
+                "time": "2022.01.01",
+                "place": "银杏湖乐园",
+                "name": "",
+                "img": "<img src=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/img/202405051543261.png  height=250px><img src=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/img/202405051605743.png  height=250px>"
+            }, {
+                "lng": 118.772751,
+                "lat": 32.036471,
+                "type": "猫咪",
+                "place": "南京市人力资源和社会保障局内",
+                "name": "第一次见是在2024.5.2，一只大橘猫，这睿智的小眼神，可惜门卫大爷不让进。",
+                "img": "<img src=https://cdn.jsdelivr.net/gh/lixiaomuicon/photo_bed@main/img/202405051609655.png width=300px height=250px>"
+            }, {
+                "lng": 118.866561,
+                "lat": 32.025378,
+                "type": "旧居",
+                "time": "2019.09---2020.09，2020.09---2022.03",
+                "place": "鸿信清新家园-6幢/20幢",
+                "name": "大三跟海军一起住的顶楼复式，是在阁楼。大四换到同小区20幢两单间，后海军毕业回家继承家业，剩我一人。",
+                "img": ""
+            }, {
+                "lng": 118.788052,
+                "lat": 32.039228,
+                "type": "美食",
+                "time": "2022.07",
+                "place": "柳州螺狮粉",
+                "name": "让一个闻到味都受不了的人开始喜欢吃了",
+                "img": ""
+            }, {
+                "lng": 118.778902,
+                "lat": 32.037279,
+                "type": "旧居",
+                "time": "2022.01---至今",
+                "place": "莫愁路90号小区",
+                "name": "",
+                "img": ""
             },
 
 
-            // {
-            // "lng": 122.037459,
-            // "lat": 37.53202,
-            // "type": "已打卡",
-            // "place": "",
-            // "name": "",
-            // "img": "<a href= target=_blank> <img src= width=300px height=200px></a>"
-            // },
+
         ];
 
         // 在指定容器创建地图实例并设置最大最小缩放级别
@@ -224,7 +274,7 @@
         });
 
         //初始化地图，设置中心点和显示级别
-        map.centerAndZoom(new BMap.Point(118.790554, 32.048009), 12);
+        map.centerAndZoom(new BMap.Point(118.790554, 32.048009), 11);
 
         //开启鼠标滚轮缩放功能，仅对PC上有效
         map.enableScrollWheelZoom(true);
@@ -244,27 +294,43 @@
                 var myIcon;
                 // 判断正常或者故障，根据不同装填显示不同Icon
                 if (points[i].type == "在路上") {
-                    myIcon = new BMap.Icon("images/fault.png", new BMap.Size(32, 32), {
+                    myIcon = new BMap.Icon("images/fault.png", new BMap.Size(16, 16), {
                         // 指定定位位置
                         offset: new BMap.Size(16, 32),
                         // 当需要从一幅较大的图片中截取某部分作为标注图标时，需要指定大图的偏移位置    
                         //imageOffset: new BMap.Size(0, -12 * 25) 
                     });
-                }
+                };
                 if (points[i].type == "猫咪") {
-                    myIcon = new BMap.Icon("images/cat.png", new BMap.Size(32, 32), {
+                    myIcon = new BMap.Icon("images/cat.png", new BMap.Size(16, 16), {
                         // 指定定位位置
                         offset: new BMap.Size(16, 32),
                         // 当需要从一幅较大的图片中截取某部分作为标注图标时，需要指定大图的偏移位置    
                         //imageOffset: new BMap.Size(0, -12 * 25) 
                     });
-                }
-                if (points[i].type == "已打卡") {
-                    myIcon = new BMap.Icon("images/normal.png", new BMap.Size(32, 32), {
+                };
+                if (points[i].type == "旧居") {
+                    myIcon = new BMap.Icon("images/home.png", new BMap.Size(16, 16), {
                         // 指定定位位置
                         offset: new BMap.Size(16, 32),
-                        // 当需要从一幅较大的图片中截取某部分作为标注图标时，需要指定大图的偏移位置 
-                        //imageOffset: new BMap.Size(0, -12 * 25)   
+                        // 当需要从一幅较大的图片中截取某部分作为标注图标时，需要指定大图的偏移位置    
+                        //imageOffset: new BMap.Size(0, -12 * 25) 
+                    });
+                };
+                if (points[i].type == "记录") {
+                    myIcon = new BMap.Icon("images/normal.png", new BMap.Size(16, 16), {
+                        // 指定定位位置
+                        offset: new BMap.Size(16, 32),
+                        // 当需要从一幅较大的图片中截取某部分作为标注图标时，需要指定大图的偏移位置    
+                        //imageOffset: new BMap.Size(0, -12 * 25) 
+                    });
+                };
+                if (points[i].type == "美食") {
+                    myIcon = new BMap.Icon("images/food.png", new BMap.Size(16, 16), {
+                        // 指定定位位置
+                        offset: new BMap.Size(16, 32),
+                        // 当需要从一幅较大的图片中截取某部分作为标注图标时，需要指定大图的偏移位置    
+                        //imageOffset: new BMap.Size(0, -12 * 25) 
                     });
                 };
                 // 创建一个图像标注实例
@@ -290,15 +356,15 @@
             if (point.type == "在路上") {
                 sContent += '<ul class="info_ul info_ui_img">';
                 sContent += '   <li class="info_lierr">';
-                sContent += '       <span class="info_span">状态：</span>';
+                sContent += '       <span class="info_span">Tag：</span>';
                 sContent += '       <span>' + point.type + '</span>';
                 sContent += '   </li>';
                 sContent += '   <li class="info_lierr">';
-                sContent += '       <span class="info_span">地点：</span>';
+                sContent += '       <span class="info_span">Place：</span>';
                 sContent += '       <span>' + point.place + '</span>';
                 sContent += '   </li>';
                 sContent += '   <li class="info_lierr">';
-                sContent += '       <span class="info_span">备注：</span>';
+                sContent += '       <span class="info_span">More：</span>';
                 sContent += '       <span>' + point.img + '</span>';
                 sContent += '   </li>';
                 sContent += '   <li class="ta-c info_lierr">';
@@ -309,15 +375,15 @@
             if (point.type == "猫咪") {
                 sContent += '<ul class="info_ul info_ui_cat">';
                 sContent += '   <li class="info_li">';
-                sContent += '       <span class="info_span">状态：</span>';
+                sContent += '       <span class="info_span">Tag：</span>';
                 sContent += '       <span>' + point.type + '</span>';
                 sContent += '   </li>';
                 sContent += '   <li class="info_li">';
-                sContent += '       <span class="info_span">地点：</span>';
+                sContent += '       <span class="info_span">Place：</span>';
                 sContent += '       <span>' + point.place + '</span>';
                 sContent += '   </li>';
                 sContent += '   <li class="info_li">';
-                sContent += '       <span class="info_span">备注：</span>';
+                sContent += '       <span class="info_span">More：</span>';
                 sContent += '       <span>' + point.name + '</span>';
                 sContent += '   </li>';
                 sContent += '   <li class="info_li">';
@@ -326,18 +392,70 @@
                 sContent += '   </li>';
                 sContent += '</ul>';
             }
-            if (point.type == "已打卡") {
+            if (point.type == "旧居") {
                 sContent += '<ul class="info_ul info_ui_Nimg">';
                 sContent += '   <li class="info_li">';
-                sContent += '       <span class="info_span">状态：</span>';
+                sContent += '       <span class="info_span">Tag：</span>';
                 sContent += '       <span>' + point.type + '</span>';
                 sContent += '   </li>';
                 sContent += '   <li class="info_li">';
-                sContent += '       <span class="info_span">地点：</span>';
+                sContent += '       <span class="info_span">Time：</span>';
+                sContent += '       <span>' + point.time + '</span>';
+                sContent += '   </li>';
+                sContent += '   <li class="info_li">';
+                sContent += '       <span class="info_span">Place：</span>';
                 sContent += '       <span>' + point.place + '</span>';
                 sContent += '   </li>';
                 sContent += '   <li class="info_li">';
-                sContent += '       <span class="info_span">备注：</span>';
+                sContent += '       <span class="info_span">More：</span>';
+                sContent += '       <span>' + point.name + '</span>';
+                sContent += '   </li>';
+                sContent += '   <li class="info_li">';
+                // sContent += '       <span class="info_span">图片：</span>';
+                sContent += '       <div>' + point.img + '</div>';
+                sContent += '   </li>';
+                sContent += '</ul>';
+            }
+            if (point.type == "记录") {
+                sContent += '<ul class="info_ul info_ui_Nimg">';
+                sContent += '   <li class="info_li">';
+                sContent += '       <span class="info_span">Tag：</span>';
+                sContent += '       <span>' + point.type + '</span>';
+                sContent += '   </li>';
+                sContent += '   <li class="info_li">';
+                sContent += '       <span class="info_span">Time：</span>';
+                sContent += '       <span>' + point.time + '</span>';
+                sContent += '   </li>';
+                sContent += '   <li class="info_li">';
+                sContent += '       <span class="info_span">Place：</span>';
+                sContent += '       <span>' + point.place + '</span>';
+                sContent += '   </li>';
+                sContent += '   <li class="info_li">';
+                sContent += '       <span class="info_span">More：</span>';
+                sContent += '       <span>' + point.name + '</span>';
+                sContent += '   </li>';
+                sContent += '   <li class="info_li">';
+                // sContent += '       <span class="info_span">图片：</span>';
+                sContent += '       <div>' + point.img + '</div>';
+                sContent += '   </li>';
+                sContent += '</ul>';
+            }
+            if (point.type == "美食") {
+                sContent += '<ul class="info_ul info_ui_Nimg">';
+                sContent += '   <li class="info_li">';
+                sContent += '       <span class="info_span">Tag：</span>';
+                sContent += '       <span>' + point.type + '</span>';
+                sContent += '   </li>';
+                sContent += '   <li class="info_li">';
+                sContent += '       <span class="info_span">Time：</span>';
+                sContent += '       <span>' + point.time + '</span>';
+                sContent += '   </li>';
+                sContent += '   <li class="info_li">';
+                sContent += '       <span class="info_span">Place：</span>';
+                sContent += '       <span>' + point.place + '</span>';
+                sContent += '   </li>';
+                sContent += '   <li class="info_li">';
+                sContent += '       <span class="info_span">More：</span>';
                 sContent += '       <span>' + point.name + '</span>';
                 sContent += '   </li>';
                 sContent += '   <li class="info_li">';
