--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
 <body>
     <div>
         <b><a>足迹地图</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b>
-        <a>©</a> <a href="https://www.lixiaomu.fun/">李小沐</a>&nbsp;&nbsp;&nbsp;
-        <a>💌</a> <a href="https://blog.lixiaomu.fun/comments/">留言</a>
+        <a>©</a> <a href="https://www.lixiaomu.fun/" target=_blank>李小沐</a>&nbsp;&nbsp;&nbsp;
+        <a>💌</a> <a href="https://blog.lixiaomu.fun/comments/" target=_blank>留言</a>
     </div>
 
     <view class="weather_info_wrap">
